CallActivity processing